# io-hal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/block/: backup_sram.rs  eeprom.rs  flash.rs  mod.rs
src/common/: io.rs  io_nb.rs  mod.rs
src/pins/: alternate.rs  analog.rs  digital.rs  mod.rs
src/serial/: i2c.rs  mod.rs  spi.rs  usart.rs
